# Badminton_Quant

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  chainlit.md  pyproject.toml  requirements-dev.txt  requirements-vision.txt  requirements.txt  setup.py
.agent/tasks/: TEMPLATE.md
.chainlit/: config.toml
.claude/: launch.json
app/: artifacts.py  auth.py  config.py  db.py  main.py  worker.py
app/pipeline/: analysis.py  annotate.py  audio.py  coach.py  court.py  evaluate.py  gemini.py  gpu.py  media.py  music.py  rally.py  rally3d.py  render.py  run.py  sanitize.py  smooth.py  stitch.py  track.py  validate.py  vision.py  vision_local.py
configs/: badminton.yaml  table_tennis.yaml
data/input/: .gitkeep
data/output/: .gitkeep
deploy/: Caddyfile  baddy.service  deploy.sh  remote_setup.sh
docs/: BRANCHING.md  dev-cycle-log.md  progress-ledger.md  research-ai-coach-stack.md  runpod-highlight-engine.md
docs/benchmarks/: PHASE0_BENCH.md
docs/reviews/: 2026-06-21-studio-camera-feedback.md  2026-07-12-rally-break-inplay-audit.md  2026-07-14-tracking-pose-segmentation-plan.md
docs/roadmap/: FUTURE_VISION.md  PRIMARY_PRD.md  RALLY_3D_RECONSTRUCTION.md  REEL_EDITOR_COMPONENT_RATIONALE.md  REEL_EDITOR_UX_RESEARCH.md  SCHOOL_PLATFORM_PRD.md
examples/: analyze_instagram.py  analyze_local_video.py  quick_test.py
landing/: README.md  package.json  tailwind.config.js
landing/public/: index.html
landing/src/: App.css  App.js  index.css
models/: .gitkeep
racket_sports/: __init__.py  cli.py  config.py  pipeline.py
racket_sports/analytics/: __init__.py  heatmap.py  shot_classifier.py  speed_detector.py  weakness.py
racket_sports/pose/: __init__.py  mediapipe_pose.py  pose_analyzer.py
racket_sports/tracking/: __init__.py  base.py  sam2_tracker.py  tracknet.py  yolo_tracker.py
racket_sports/video_acquisition/: __init__.py  acquisition.py  instagram.py
racket_sports/visualization/: __init__.py  overlays.py  reports.py
runpod_worker/: Dockerfile  README.md  botsort_baddy.yaml  build_and_push.sh  cloudbuild.yaml  handler.py  patch_dataset.py  requirements.txt  test_input.json
scripts/: check.sh  make_studio_fixture.py  patch_tracknet_device.py  runpod_preflight.sh  runpod_smoke.py  runpod_update_endpoint_image.py
scripts/bench/: metrics.py  (+1 more)
web/: app.html  app.js  architecture.html  index.html  login.html  platform.css  platform.js  replay3d.js  style.css
(+102 files in other folders)
